<resources>
	<string name="show_error_details">
		<u>SHOW ERROR DETAILS</u>
	</string>
  <string name="show_details">SHOW DETAILS</string>
  <string name="hide_details">HIDE DETAILS</string>
  <string name="quit">QUIT</string>
  <string name="relaunch">RELAUNCH</string>
  <string name="this_is_embarrassing_we_sincerely_apologize_for_this">This is embarrassing. We sincerely apologize for this.</string>
  <string name="critical_error_occurred">Critical Error Occurred !</string>
</resources>
