<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#FFF"
  android:fillViewport="true"
  android:orientation="vertical"
  android:visibility="visible"
  tools:ignore="UseAppTint">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:padding="10dp"
      android:text="@string/critical_error_occurred"
      android:textColor="#000"
      android:textSize="20sp"
      android:textStyle="bold" />

    <ImageView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:adjustViewBounds="true"
      android:maxWidth="50dp"
      android:maxHeight="50dp"
      android:scaleType="fitCenter"
      android:src="@android:drawable/ic_dialog_info"
      android:tint="#F00" />

    <TextView
      android:id="@+id/textView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:padding="10dp"
      android:text="@string/this_is_embarrassing_we_sincerely_apologize_for_this"
      android:textColor="#000" />

    <LinearLayout
      style="?android:attr/buttonBarStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="bottom"
      android:paddingTop="10dp">

      <Button
        android:id="@+id/eh_restart_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/relaunch" />

      <Button
        android:id="@+id/eh_quit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/quit" />
    </LinearLayout>

    <Button
      android:id="@+id/eh_show_details_button"
      android:layout_width="match_parent"
      android:layout_height="25dp"
      android:background="@android:color/transparent"
      android:gravity="center"
      android:text="@string/show_details"
      android:textSize="11sp"
      android:textStyle="bold" />

    <TextView
      android:id="@+id/eh_stack_trace_text_view"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="#EEE"
      android:text=""
      android:visibility="gone" />

  </LinearLayout>

</ScrollView>
